Add collision detection and enable kill tanks

--- a/www/css/tanks.css
+++ b/www/css/tanks.css
@@ -28,6 +28,13 @@ body{
 	background-position: -10px 0;
 }
 
+.explosion{
+	position: absolute;
+	width: 100px;
+	height: 120px;
+	z-index: 99;
+}
+
 .tank-cannon{
 	position: absolute;
 	top: -25px;
